[project]
requires-python = ">=3.8"

[build-system]
requires = [
    "setuptools >= 40.9.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project.dependencies]
    base58 = ">= 2.1, < 3"
    flup-py3 = ">= 1.0 , < 2"
    pycryptodome = ">= 3.12, < 4"

[project.optional-dependencies]
# Database Options
mysql = [
  "mysqlclient ~= 2.1"
]
psql = [
  "psycopg2 ~= 2.9"
]
# Chain Options
x11 = [
  "x11_hash"
]
ltc =[
  "ltc_scrypt"
]


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.pytest.ini_options]
addopts = "--disable-socket"
python_files = "tests.py test_*.py *_tests.py"
