[metadata]
name = Abe
version = 0.8pre
description = Abe: a free block chain browser for Bitcoin-based currencies.
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
license = GNU
classifiers = 
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: Database :: Front-Ends
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Office/Business :: Financial
    Topic :: Security :: Cryptography
    ; Topic :: Software Development :: Libraries :: Python Modules
author = John Tobey
author_email = jtobey@john-edwin-tobey.org
url = https://github.com/bitcoin-abe/bitcoin-abe

[options]
package_dir =
    = Abe
packages = find:
include_package_data = True

[options.packages.find]
where = Abe, Abe.chains
